# candlestick

./: Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
dags/: bitcoin_etl.py
dags/bitcoin_candlestick_etl_dbt/: .gitignore  dbt_project.yml
dags/bitcoin_candlestick_etl_dbt/macros/: utils.sql
dags/bitcoin_candlestick_etl_dbt/models/candlestick/: candlestick.sql  schema.yml  sources.yml
dags/bitcoin_candlestick_etl_dbt/profiles/: .user.yml  profiles.yml
scripts/: init.sh  init.sql
