[tool.poetry]
name = "bitcoin-candlestick-etl"
version = "0.1.0"
description = ""
authors = ["raja <raje.megdiche@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
duckdb = "1.1.0"
sqlalchemy= "1.4.51"
pycoingecko = "^3.2.0"
dbt-duckdb = "^1.9.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"